// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client.ts should create 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "client_created",
    "payload": Object {
      "approved": true,
      "created": 2020-01-01T07:00:00.000Z,
      "description": "description",
      "extra": Object {
        "emailAuthorizationUri": "https://lindorm.io",
      },
      "name": "name",
      "secret": "secret",
      "updated": 2020-01-01T07:00:00.000Z,
    },
  },
]
`;

exports[`Client.ts should get/set approved 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "client_approved_changed",
    "payload": Object {
      "approved": false,
    },
  },
]
`;

exports[`Client.ts should get/set description 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "client_description_changed",
    "payload": Object {
      "description": "new-description",
    },
  },
]
`;

exports[`Client.ts should get/set extra 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "client_extra_changed",
    "payload": Object {
      "extra": Object {
        "emailAuthorizationUri": "https://lindorm.io/new",
      },
    },
  },
]
`;

exports[`Client.ts should get/set name 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "client_name_changed",
    "payload": Object {
      "name": "new-name",
    },
  },
]
`;

exports[`Client.ts should get/set secret 1`] = `
Array [
  Object {
    "date": 2020-01-01T07:00:00.000Z,
    "name": "client_secret_changed",
    "payload": Object {
      "secret": "new-secret",
    },
  },
]
`;

exports[`Client.ts should have all data 1`] = `
Client {
  "_approved": true,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": "description",
  "_events": Array [],
  "_extra": Object {
    "emailAuthorizationUri": "https://lindorm.io",
  },
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": "name",
  "_secret": "secret",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`Client.ts should have optional data 1`] = `
Client {
  "_approved": false,
  "_created": 2020-01-01T07:00:00.000Z,
  "_description": null,
  "_events": Array [],
  "_extra": Object {},
  "_id": "be3a62d1-24a0-401c-96dd-3aff95356811",
  "_name": null,
  "_secret": null,
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;
